--- a/config/rule.yml
+++ b/config/rule.yml
@@ -1,31 +1,30 @@
 rules:
-  - name: CleanAllNameIsJohn
-    index: ["articles"]
-    type: deletebyquery
-    cron: "@every 1h"
-    body: |
-      {
-      	"query": {
-      		"match":{"author.first_name":"John"}
-      	}
-      }
-  - name: CleanData
-    index: ["articles"]
-    type: deletebyquery
-    cron: "@every 5h"
-    body: |
-      {
-      	"query": {
-      		"match":{"author.last_name":"Smith"}
-      	}
-      }
-  - name: CleanFirstNameIsJohnEveryFiveSecond,
-    index: ["articles"]
-    type: deletebyquery
-    cron: "@every 5s"
-    body: |
-      {
-      	"query": {
-      		"match":{"author.first_name":"John"}
-      	}
-      }
+  deletebyquery:
+    - name: CleanAllNameIsJohn
+      index: ["articles"]
+      cron: "@every 1h"
+      body: |
+        {
+        	"query": {
+        		"match":{"author.first_name":"John"}
+        	}
+        }
+    - name: CleanData
+      index: ["articles"]
+      from: 0
+      cron: "@every 5h"
+      body: |
+        {
+        	"query": {
+        		"match":{"author.last_name":"Smith"}
+        	}
+        }
+    - name: CleanFirstNameIsJohnEveryFiveSecond,
+      index: ["articles"]
+      cron: "@every 5s"
+      body: |
+        {
+        	"query": {
+        		"match":{"author.first_name":"John"}
+        	}
+        }
